20020426
 - (djm) Bug #137, #209: fix make problems for scard/Ssh.bin, do uudecode
   during distprep only
 - (djm) Disable PAM password expiry until a complete fix for bug #188 exists

20020425
 - (stevesk) [defines.h] remove USE_TIMEVAL; unused
 - (stevesk) [acconfig.h auth-passwd.c configure.ac sshd.c] HP-UX 10.26
   support.  bug #184.  most from dcole@keysoftsys.com.

20020424
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/04/23 12:54:10
     [version.h]
     3.2.1
   - djm@cvs.openbsd.org 2002/04/23 22:16:29
     [sshd.c]
     Improve error message; ok markus@ stevesk@

20020423
 - (stevesk) [acconfig.h configure.ac session.c] LOGIN_NO_ENDOPT for HP-UX
 - (stevesk) [acconfig.h] NEED_IN_SYSTM_H unused
 - (markus) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/04/23 12:58:26
     [radix.c]
     send complete ticket; semerad@ss1000.ms.mff.cuni.cz
 - (djm) Trim ChangeLog to include only post-3.1 changes
 - (djm) Update RPM spec file versions
 - (djm) Redhat spec enables KrbV by default
 - (djm) Applied OpenSC smartcard updates from Markus & 
   Antti Tapaninen <aet@cc.hut.fi>
 - (djm) Define BROKEN_REALPATH for AIX, patch from 
   Antti Tapaninen <aet@cc.hut.fi>
 - (djm) Bug #214: Fix utmp for Irix (don't strip "tty"). Patch from 
   Kevin Taylor <no@nowhere.org> (??) via Philipp Grau
   <phgrau@zedat.fu-berlin.de>
 - (djm) Bug #213: Simplify CMSG_ALIGN macros to avoid symbol clashes. 
   Reported by Doug Manton <dmanton@emea.att.com>
 - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
   Robert Urban <urban@spielwiese.de>
 - (djm) Bug #206 - blibpath isn't always needed for AIX ld, avoid 
   sizeof(long long int) == 4 breakage. Patch from Matthew Clarke
   <Matthew_Clarke@mindlink.bc.ca>
 - (djm) Make privsep work with PAM (still experimental)
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2002/04/20 09:02:03
     [servconf.c]
     No, afs requires explicit enabling
   - markus@cvs.openbsd.org 2002/04/20 09:14:58